Score and stuff

--- a/gameclient/index.html
+++ b/gameclient/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Preload character images to make pose swaps instant -->
+  <link rel="preload" as="image" href="/images/characters/boxer.png" />
+  <link rel="preload" as="image" href="/images/characters/boxer-punch.png" />
+  <link rel="preload" as="image" href="/images/characters/mmafighter.png" />
+  <link rel="preload" as="image" href="/images/characters/mmafighter-punch.png" />
     <title>BeatBoxing - Retro Graffiti Arcade Rhythm Game</title>
   </head>
   <body>
