--- a/gameclient/index.html
+++ b/gameclient/index.html
@@ -9,7 +9,7 @@
   <link rel="preload" as="image" href="/images/characters/boxer-punch.png" />
   <link rel="preload" as="image" href="/images/characters/mmafighter.png" />
   <link rel="preload" as="image" href="/images/characters/mmafighter-punch.png" />
-    <title>BeatBoxing - Retro Graffiti Arcade Rhythm Game</title>
+    <title>BeatBoxing</title>
   </head>
   <body>
     <div id="root"></div>
